force-app/main/default/objects/CM_Capacity__c/CM_Capacity__c.object-meta.xml
<CustomObject>
    <description>A junction object between User and Sprint to show the resource capacity in hours to compare against the assigned hours for the sprint.</description>
    <label>Capacity</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Capacity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Capacities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>