force-app/main/default/objects/CM_Capacity__c/fields/Hours_Available__c.field-meta.xml
<CustomField>
    <fullName>Hours_Available__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The number of hours the Resource(User) is available for the Sprint</description>
    <inlineHelpText>When entering hours available for the sprint make sure to exclude administrative overhead such as attending non-backlog item related meetings, town halls, PTO, training, etc...  80% of a work week is 32 hours.</inlineHelpText>
    <label>Hours Available</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>