force-app/main/default/objects/CM_Capacity__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Resource(User) who has capacity for the sprint</description>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resource_Capacities</relationshipName>
    <type>Lookup</type>
</CustomField>