force-app/main/default/objects/CM_Capacity__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <description>The Sprint to which the Resource(User) has capacity</description>
    <label>Sprint</label>
    <referenceTo>CM_Sprint__c</referenceTo>
    <relationshipLabel>Resource Capacities</relationshipLabel>
    <relationshipName>Resource_Capacities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>