force-app/main/default/objects/CM_Capacity__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Hidden unique value storing both the Resource(User) ID and the Sprint Id</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>